# bb-review

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  config.example.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/: bb-review-notes.md
bb_review/: __init__.py  analyzer.py  cli.py  commenter.py  config.py  crypto.py  guidelines.py  guidelines_deploy.py  mcp_server.py  models.py  opencode_runner.py  poller.py  progress.py  queue_sync.py  rb_client.py  repo_manager.py
bb_review/cli/: __init__.py  _progress.py  _review_runner.py  _session.py  analyze.py  claude_code.py  cocoindex.py  codex.py  comments.py  db.py  export_interactive.py  interactive.py  opencode.py  poll.py  queue.py  repos.py  resolve.py  rules.py  submit.py  transcript.py  triage.py  utils.py
bb_review/db/: __init__.py  export.py  mining_db.py  models.py  queue_db.py  queue_models.py  review_db.py
bb_review/git/: __init__.py  manager.py
bb_review/indexing/: __init__.py  indexer.py  mcp.py
bb_review/reviewers/: __init__.py  claude_code.py  codex.py  diff_utils.py  llm.py  opencode.py  providers.py
bb_review/rr/: __init__.py  chain.py  dedup.py  rb_client.py  rb_commenter.py  rb_fetcher.py
bb_review/rules/: __init__.py  agent_runner.py  fetcher.py  synthesizer.py
bb_review/triage/: __init__.py  agent_triage.py  analyzer.py  models.py  plan_writer.py  replier.py
bb_review/ui/: __init__.py  export_app.py  models.py  progress_reporter.py  queue_app.py  review_handler.py  triage_handler.py  unified_app.py  utils.py
docs/: bb_review_design_overview.docx  memory.md
guides/: README.md  net-drv-ts.ai-review.yaml
opencode/: README.md  mcp-cocode-lmstudio.json  mcp-cocode-openrouter.json  mcp-cocode.json  mcp-combined.json  mcp-filesystem.json  mcp-local-search.json  te-review-command  te-ts-reviewer  ts-te-mcp
scripts/: cocoindex-server.sh  install.sh  setup-cocoindex-db.sh
tests/: README.md  __init__.py  conftest.py
tests/cli/: __init__.py  test_analyze.py  test_db.py  test_encrypt_password.py  test_init.py  test_poll.py  test_queue.py  test_repos.py  test_rules.py  test_submit.py
tests/data/: config_invalid.yaml  config_valid.yaml  config_with_env.yaml  sample_diff.patch  sample_opencode_output.txt  sample_response.json
tests/integration/: __init__.py  test_analyzer.py  test_providers.py  test_repo_manager.py
tests/mocks/: __init__.py  llm_provider.py  rb_client.py
tests/unit/: __init__.py  test_agent_runner.py  test_chain.py  test_claude_code.py  test_commenter.py  test_config.py  test_crypto.py  test_dedup.py  test_diff_hunk_extraction.py  test_diff_utils.py  test_guidelines.py  test_guidelines_deploy.py  test_json_extraction.py  test_llm_parsing.py  test_mining_db.py  test_opencode_parsing.py  test_plan_writer.py  test_progress.py  test_progress_cli.py  test_queue_db.py  test_queue_sync_progress.py  test_rb_client.py  test_rb_client_progress.py  test_rb_fetcher.py  test_rb_fetcher_progress.py  test_replier.py  test_review_db.py  test_review_runner.py  test_review_runner_orchestration.py  test_rich_guidelines.py  test_rules_fetcher.py  test_rules_synthesizer.py  test_split_issues.py  test_transcript.py  test_triage_analyzer.py  test_url_parsing.py
(+30 files in other folders)
